# snake

./: CMakeLists.txt
src/: main.cpp
